--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
             <artifactId>sootup.qilin</artifactId>
             <version>1.3.0</version>
         </dependency>
+
+        <!-- Z3 (local install) -->
+        <dependency>
+            <groupId>com.microsoft</groupId>
+            <artifactId>z3</artifactId>
+            <version>4.13.3</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
