--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>z3</artifactId>
             <version>4.13.3</version>
         </dependency>
+
+        <!-- Logback for logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.12</version>
+        </dependency>
     </dependencies>
 
     <build>
