--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
             <version>1.3.0</version>
         </dependency>
 
+        <!-- ASM for bytecode manipulation -->
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>9.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <version>9.7.1</version>
+        </dependency>
+
         <!-- Z3 (local install) -->
         <dependency>
             <groupId>com.microsoft</groupId>
