--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <artifactId>javapoet</artifactId>
             <version>0.6.0</version>
         </dependency>
+
+        <!-- Picocli for Command-Line Interface -->
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.7.6</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -135,7 +142,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>nl.uu.main.Application</mainClass>
+                    <mainClass>nl.uu.maze.main.Application</mainClass>
                 </configuration>
             </plugin>
 
