feat: add option to target JUnit4 for generated tests

--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <junit.version>5.11.3</junit.version>
     </properties>
 
     <dependencies>
-        <!-- JUnit 5 for testing -->
+        <!-- JUnit 5 for test suite -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit.version}</version>
-            <scope>compile</scope>
+            <version>5.11.3</version>
+        </dependency>
+
+        <!-- JUnit 4 for generated tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
         </dependency>
 
         <!-- Soot Framework -->
