adding translation of java type casting float-like to integral-type to the corresponding z3 conversion from FP to BV. This was somehow misscing in the current maze.

--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,16 @@
         </dependency>
 
         <!-- Z3 (local install) -->
+        <!--
+            TODO:
+            temporarily disabling this for working locally in my Eclipse IDE, 
+            linking explicitly to the jar
         <dependency>
             <groupId>com.microsoft</groupId>
             <artifactId>z3</artifactId>
             <version>4.13.3</version>
         </dependency>
+        -->
 
         <!-- Logback for logging -->
         <dependency>
