--- a/pom.xml
+++ b/pom.xml
@@ -63,16 +63,11 @@
         </dependency>
 
         <!-- Z3 (local install) -->
-        <!--
-            TODO:
-            temporarily disabling this for working locally in my Eclipse IDE, 
-            linking explicitly to the jar
         <dependency>
             <groupId>com.microsoft</groupId>
             <artifactId>z3</artifactId>
             <version>4.13.3</version>
         </dependency>
-        -->
 
         <!-- Logback for logging -->
         <dependency>
@@ -193,7 +188,11 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <!-- 8.12 supports java 22 -->
                 <version>0.8.12</version>
+                <!--   use to 8.13, or higher for java 24
+                <version>0.8.13</version>
+                -->
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
